Fix around https://bugzilla.redhat.com/show_bug.cgi?id=901333

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: c
-install: autoreconf --install
+install: 
+    - aclocal --install
+    - autoreconf --install
 compiler:
     - clang
     - gcc
