Fix build in Ubuntu

--- a/docs/examples/Makefile.am
+++ b/docs/examples/Makefile.am
@@ -1,5 +1,5 @@
 AM_CPPFLAGS = -I$(top_srcdir)/src -rdynamic
-AM_LDFLAGS = -ldl -rdynamic
+AM_LDFLAGS = -Wl,--no-as-needed -ldl -rdynamic
 LDADD = $(top_builddir)/src/libunittest.la
 
 noinst_PROGRAMS = helloworld fail failfast firstfail
